--- a/core/ui/src/main/res/layout/layout_linear_info.xml
+++ b/core/ui/src/main/res/layout/layout_linear_info.xml
@@ -8,6 +8,7 @@
     <TextView
         android:id="@+id/title"
         style="@style/SmallTitleTextViewStyle"
+        android:textStyle="normal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
