--- a/core/ui/src/main/res/layout/list_item_media_small.xml
+++ b/core/ui/src/main/res/layout/list_item_media_small.xml
@@ -18,9 +18,8 @@
         android:layout_marginTop="@dimen/base_margin"
         app:pv_chipValue="@{media.voteAverageRounded}"
         app:pv_imageUrl="@{media.completePosterPathW780}"
-        app:pv_posterHeight="170dp"
-        app:pv_title_style="@style/BodyTextViewStyle"
-        app:pv_posterWidth="120dp"
+        app:pv_posterHeight="@dimen/default_poster_height"
+        app:pv_posterWidth="@dimen/default_poster_width"
         app:pv_title="@{media.mediaName}" />
 
 </layout>
