--- a/core/ui/src/main/res/layout/poster_view.xml
+++ b/core/ui/src/main/res/layout/poster_view.xml
@@ -21,17 +21,16 @@
 
         <TextView
             android:id="@+id/chipTextView"
-            style="@style/SmallTitleTextViewStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
-            android:background="@drawable/round_corner_transparent_bg"
-            android:paddingEnd="@dimen/base_margin"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:paddingStart="@dimen/base_margin"
-            android:textColor="?attr/colorOnPrimary"
+            android:background="@drawable/background_transparent_black"
+            android:paddingHorizontal="@dimen/base_margin"
+            android:textSize="@dimen/default_chip_text_size"
+            android:paddingVertical="5dp"
+            android:textColor="@color/white_new"
+            android:textStyle="bold"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/posterImageView"
@@ -40,11 +39,13 @@
 
         <TextView
             android:id="@+id/titleTextView"
-            style="@style/SmallTitleTextViewStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:maxLines="2"
+            android:maxLength="29"
+            android:textSize="@dimen/default_poster_title_size"
+            android:textColor="?attr/colorOnSecondary"
+            android:textStyle="normal"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
