--- a/core/ui/src/main/res/values/colors.xml
+++ b/core/ui/src/main/res/values/colors.xml
@@ -15,7 +15,7 @@
 
 
     <!-- Primary color -->
-    <color name="mirage_100">#151D26</color>
+    <color name="mirage_100">#101823</color>
     <!-- Primary color variant-->
     <color name="mirage_90">#E6151D26</color>
     <!-- Secondary color  -->
@@ -24,10 +24,11 @@
     <color name="lynch_90">#E61D2633</color>
     <!-- OTHER colors-->
     <color name="blue_stone_100">#026258</color>
-    <color name="vermilion_100">#D84315</color>
+    <color name="vermilion_100">#FFD84315</color>
     <color name="vermilion_74">#BDD84315</color>
-    <color name="alabaster">#FAFAFA</color>
-    <color name="geyser">#CFD8DC</color>
+    <color name="white_new">#FFECEFF1</color>
+    <color name="alabaster">#FFCFD8DC</color>
+    <color name="geyser">#FFB0BEC5</color>
     <color name="royal_blue_100">#3A55EA</color>
     <color name="royal_blue_70">#B33A55EA</color>
     <color name="fern_frond_100">#487B1E</color>
