--- a/core/ui/src/main/res/values/dimens.xml
+++ b/core/ui/src/main/res/values/dimens.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <dimen name="base_margin">10dp</dimen>
     <dimen name="base_corner_radius">10dp</dimen>
     <dimen name="grid_spacing">10dp</dimen>
 
+    <!--    Poster dimens-->
     <dimen name="default_poster_title_size">14sp</dimen>
     <dimen name="default_chip_text_size">12sp</dimen>
-    <dimen name="default_poster_height">150dp</dimen>
-    <dimen name="default_poster_width">100dp</dimen>
+    <dimen name="default_poster_height">170dp</dimen>
+    <dimen name="default_poster_width">120dp</dimen>
+    <!--end poster dimens-->
 
+    <!--    Text dimens-->
     <dimen name="huge_text_size">24sp</dimen>
-    <dimen name="medium_text_size">18sp</dimen>
-    <dimen name="small_text_size">16sp</dimen>
+    <dimen name="big_text_size">18sp</dimen>
+    <dimen name="medium_text_size">14sp</dimen>
+    <dimen name="small_text_size">11sp</dimen>
+    <!--    End text dimens-->
 </resources>
