--- a/feature/media_discover/src/main/res/layout/fragment_discover.xml
+++ b/feature/media_discover/src/main/res/layout/fragment_discover.xml
@@ -17,9 +17,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="?attr/actionBarSize"
             android:text="Discover"
-            android:textColor="?attr/colorOnPrimary"
-            android:textSize="@dimen/huge_text_size"
-            android:textStyle="bold"
+            style="@style/HugeTitleTextViewStyle"
+            android:textColor="@color/white_new"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -34,8 +33,8 @@
             android:padding="@dimen/base_margin"
             android:text="Search movies by title"
             android:textAllCaps="false"
-            android:textColor="?attr/colorOnSecondary"
-            android:textSize="@dimen/small_text_size"
+            android:textColor="?attr/colorOnPrimary"
+            android:textSize="@dimen/medium_text_size"
             android:textStyle="bold"
             app:cornerRadius="@dimen/base_corner_radius"
             app:icon="@drawable/ic_search"
@@ -55,7 +54,7 @@
             android:text="Custom Filters"
             android:textAllCaps="false"
             android:textColor="?attr/colorOnPrimary"
-            android:textSize="@dimen/small_text_size"
+            android:textSize="@dimen/medium_text_size"
             android:textStyle="bold"
             app:cornerRadius="@dimen/base_corner_radius"
             app:icon="@drawable/ic_filters"
