--- a/feature/movie_details/src/main/res/layout/fragment_media_details.xml
+++ b/feature/movie_details/src/main/res/layout/fragment_media_details.xml
@@ -24,10 +24,10 @@
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapse_toolbar"
+                style="@style/HugeTitleTextViewStyle"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/media_details_backdrop_height"
                 android:textSize="@dimen/medium_text_size"
-                style="@style/HugeTitleTextViewStyle"
                 app:collapsedTitleTextColor="?attr/colorOnPrimary"
                 app:contentScrim="?attr/colorPrimary"
                 app:expandedTitleMarginStart="@dimen/base_margin"
@@ -45,7 +45,7 @@
                     <FrameLayout
                         android:id="@+id/media_backdrop"
                         android:layout_width="match_parent"
-                        android:layout_height="250dp"
+                        android:layout_height="220dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
@@ -98,6 +98,7 @@
                         android:ellipsize="end"
                         android:maxLines="2"
                         android:text="@{media.title}"
+                        android:textColor="@color/white_new"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/media_poster"
                         app:layout_constraintTop_toBottomOf="@id/media_backdrop"
@@ -111,28 +112,33 @@
                         app:layout_constraintStart_toEndOf="@id/media_poster"
                         app:layout_constraintTop_toBottomOf="@id/media_title">
 
-                        <com.google.android.material.chip.Chip
+
+                        <TextView
                             android:id="@+id/certification"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/base_margin"
-                            android:backgroundTint="?attr/colorSecondary"
-                            android:textColor="?attr/colorOnSecondary"
-                            android:textSize="@dimen/small_text_size"
+                            android:background="@drawable/background_transparent_secondary"
+                            android:paddingHorizontal="@dimen/base_margin"
+                            android:textSize="@dimen/default_chip_text_size"
+                            android:paddingVertical="5dp"
+                            android:textColor="@color/white_new"
+                            android:textStyle="bold"
                             android:visibility="gone"
-                            app:layout_constraintTop_toBottomOf="@id/media_title"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="@id/posterImageView"
                             tools:text="PG-18"
                             tools:visibility="visible" />
 
                         <TextView
                             android:id="@+id/media_release_date"
+                            style="@style/SmallTitleTextViewStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/base_margin"
                             android:layout_marginEnd="@dimen/base_margin"
                             android:text='@{media.formattedReleaseDate+" - "+media.formattedRuntime }'
                             android:textColor="?attr/colorOnSecondary"
-                            android:textSize="@dimen/small_text_size"
                             android:visibility='@{media.formattedReleaseDate==null?View.GONE:View.VISIBLE}'
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@id/certification"
