--- a/core/ui/src/main/res/values/styles.xml
+++ b/core/ui/src/main/res/values/styles.xml
@@ -107,7 +107,7 @@
         <item name="android:textColor">@color/white_new</item>
     </style>
 
-    <style name="ChoiceChipStyle" parent="Widget.MaterialComponents.Chip.Choice">
+    <style name="ChoiceChipStyle" parent="Widget.MaterialComponents.Chip.Action">
         <item name="chipBackgroundColor">?attr/colorSecondary</item>
         <item name="chipCornerRadius">10dp</item>
         <item name="android:textColor">@color/white_new</item>
