fix: UI and NullPointerException

--- a/feature/person_details/src/main/res/layout/fragment_person_about.xml
+++ b/feature/person_details/src/main/res/layout/fragment_person_about.xml
@@ -29,8 +29,9 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:textSize="@dimen/small_text_size"
+                app:textSize="@dimen/medium_text_size"
                 app:title="Age"
+                app:textTitleStyle="normal"
                 app:titleTextColor="?attr/colorOnSecondary"
                 app:value="@{person.age}"
                 app:valueTextColor="?attr/colorOnPrimary" />
@@ -43,11 +44,12 @@
                 android:layout_marginTop="@dimen/base_margin"
                 android:layout_marginBottom="@dimen/base_margin"
                 android:orientation="horizontal"
+                app:textTitleStyle="normal"
                 app:hideIfValueEmpty="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/age"
-                app:textSize="@dimen/small_text_size"
+                app:textSize="@dimen/medium_text_size"
                 app:title="Birth day"
                 app:titleTextColor="?attr/colorOnSecondary"
                 app:value="@{person.formattedBirthDay}"
@@ -64,8 +66,9 @@
                 app:hideIfValueEmpty="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:textTitleStyle="normal"
                 app:layout_constraintTop_toBottomOf="@id/birthday"
-                app:textSize="@dimen/small_text_size"
+                app:textSize="@dimen/medium_text_size"
                 app:title="From"
                 app:titleTextColor="?attr/colorOnSecondary"
                 app:value="@{person.placeOfBirth}"
@@ -81,9 +84,10 @@
                 android:orientation="vertical"
                 app:hideIfValueEmpty="true"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:textTitleStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/birthplace"
-                app:textSize="@dimen/small_text_size"
+                app:textSize="@dimen/medium_text_size"
                 app:title="Biography"
                 app:titleTextColor="?attr/colorOnSecondary"
                 app:value="@{person.biography}"
