--- a/feature/media_discover/src/main/res/layout/bottom_sheet_movie_filter.xml
+++ b/feature/media_discover/src/main/res/layout/bottom_sheet_movie_filter.xml
@@ -111,6 +111,7 @@
         style="@style/PrimaryCustomMaterialButtonStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/base_margin"
         android:layout_marginStart="@dimen/base_margin"
         android:layout_marginTop="@dimen/base_margin"
         android:text="@string/custom_filter_apply_action"
@@ -125,6 +126,7 @@
         android:layout_marginEnd="@dimen/base_margin"
         android:clipChildren="false"
         android:clipToPadding="false"
+        android:layout_marginStart="@dimen/base_margin"
         android:background="?attr/colorSecondary"
         app:layout_constraintEnd_toStartOf="@id/btnApply"
         app:layout_constraintStart_toStartOf="parent"
