--- a/feature/media_discover/src/main/res/layout/bottom_sheet_movie_filter.xml
+++ b/feature/media_discover/src/main/res/layout/bottom_sheet_movie_filter.xml
@@ -127,7 +127,7 @@
         android:clipChildren="false"
         android:clipToPadding="false"
         android:layout_marginStart="@dimen/base_margin"
-        android:background="?attr/colorSecondary"
+        android:background="@android:color/transparent"
         app:layout_constraintEnd_toStartOf="@id/btnApply"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/btnApply">
