--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,11 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@id/home_graph"
-        android:icon="@drawable/ic_baseline_house_siding_24"
+        android:icon="@drawable/ic_home_selector"
         android:title="@string/top_destination_home" />
     <item
         android:id="@id/discover_graph"
-        android:icon="@drawable/ic_discover"
+        android:icon="@drawable/ic_discover_selector"
         android:title="@string/top_destination_discover" />
+    <item
+        android:icon="@drawable/ic_saved_selector"
+        android:title="@string/top_destination_saved" />
+    <item
+        android:icon="@drawable/ic_person_selector"
+        android:title="@string/top_destination_profile" />
 
 </menu>
