feat: update genre style in movie details
+ Now user can select a genre as favorite and update his style with a new one

--- a/core/ui/src/main/res/values/styles.xml
+++ b/core/ui/src/main/res/values/styles.xml
@@ -99,19 +99,31 @@
     <!--    End Dialog Style-->
 
 
+    <!--Chip styles-->
     <style name="CustomFilterChipStyle" parent="Widget.MaterialComponents.Chip.Filter">
         <item name="chipBackgroundColor">@color/background_color_chip_state_list</item>
         <item name="chipStrokeColor">@color/royal_blue_100</item>
         <item name="chipStrokeWidth">2dp</item>
-        <item name="chipCornerRadius">10dp</item>
+        <item name="chipCornerRadius">@dimen/base_corner_radius</item>
         <item name="android:textColor">@color/white_new</item>
     </style>
 
     <style name="ChoiceChipStyle" parent="Widget.MaterialComponents.Chip.Action">
         <item name="chipBackgroundColor">?attr/colorSecondary</item>
-        <item name="chipCornerRadius">10dp</item>
+        <item name="chipCornerRadius">@dimen/base_corner_radius</item>
         <item name="android:textColor">@color/white_new</item>
     </style>
+
+    <style name="FavoriteChipStyle" parent="Widget.MaterialComponents.Chip.Action">
+        <item name="chipBackgroundColor">?attr/colorSecondary</item>
+        <item name="chipCornerRadius">@dimen/base_corner_radius</item>
+        <item name="android:textColor">@color/white_new</item>
+        <item name="chipIcon">@drawable/ic_favorite</item>
+        <item name="chipIconTint">@color/vermilion_100</item>
+        <item name="chipStrokeColor">?attr/colorAccent</item> <!-- Colore del bordo -->
+        <item name="chipStrokeWidth">2dp</item> <!-- Larghezza del bordo -->
+    </style>
+    <!--End chip styles-->
 
 
     <style name="CustomDialogStyle" parent="ThemeOverlay.MaterialComponents.Dialog.Alert">
@@ -146,8 +158,6 @@
         </item> <!-- Set textSize to your desired size -->
         <item name="android:backgroundTint">?colorSecondary</item>
     </style>
-
-
 
 
 </resources>
