--- a/core/ui/src/main/res/layout/layout_favorite_chip.xml
+++ b/core/ui/src/main/res/layout/layout_favorite_chip.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.chip.Chip xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/ChoiceChipStyle"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/FavoriteChipStyle"
     android:layout_width="wrap_content"
+    tools:text="My fav genre"
     android:layout_height="wrap_content" />
