fix: update fav genre function

--- a/feature/media_discover/src/main/res/navigation/discover_graph.xml
+++ b/feature/media_discover/src/main/res/navigation/discover_graph.xml
@@ -7,25 +7,27 @@
 
     <fragment
         android:id="@+id/discoverFragment"
-        tools:layout="@layout/fragment_discover"
         android:name="com.indisparte.media_discover.DiscoverFragment"
-        android:label="Discover" >
+        android:label="Discover"
+        tools:layout="@layout/fragment_discover">
         <action
             android:id="@+id/action_discoverFragment_to_customFilterFragment"
             app:destination="@id/filterableContainerFragment" />
     </fragment>
     <fragment
         android:id="@+id/filterableContainerFragment"
-        tools:layout="@layout/fragment_container_filterable"
         android:name="com.indisparte.media_discover.filterable_fragment.FilterableContainerFragment"
-        android:label="Custom Filter" >
+        android:label="Custom Filter"
+        tools:layout="@layout/fragment_container_filterable">
         <action
             android:id="@+id/action_customFilterFragment_to_movieFilter"
             app:destination="@id/movieFilterBottomSheet" />
+
     </fragment>
     <dialog
         android:id="@+id/movieFilterBottomSheet"
-        tools:layout="@layout/bottom_sheet_movie_filter"
         android:name="com.indisparte.media_discover.filterable_fragment.movie.bottom_sheet.MovieFilterBottomSheet"
-        android:label="Filter" />
+        android:label="Filter"
+        tools:layout="@layout/bottom_sheet_movie_filter" />
+
 </navigation>
